src/test/ui/issues/issue-39687.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-39687.rs:4:16
   |
LL |     <fn() as Fn()>::call;
   |                ^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
